--- a/src/main/java/webapp/WEB-INF/pages/csspages/form-style.css
+++ b/src/main/java/webapp/WEB-INF/pages/csspages/form-style.css
@@ -14,6 +14,22 @@ form {
     margin: 0 auto;
     display: inline-block;
     text-align: center;
-    border: 3px solid #73AD21;
+    border: 3px solid #229aec;
 
+}
+legend{
+    color: rgba(85, 68, 173, 0.77);
+}
+table ,td {
+    height: 50px;
+    vertical-align: bottom;
+    border: 1px solid black;
+    border: 1px solid #082a81;
+}
+
+.tableStyle {
+    height: 50px;
+    vertical-align: bottom;
+    border: 1px solid black;
+    border: 1px solid #082a81;
 }
