--- a/src/main/java/webapp/WEB-INF/pages/csspages/form-style.css
+++ b/src/main/java/webapp/WEB-INF/pages/csspages/form-style.css
@@ -1,7 +1,5 @@
 ﻿body {
-    background-color : rgba(72, 72, 72, 0);
-    margin: 0;
-    padding: 0;
+
     text-align : center;
 }
 h1 {
@@ -18,18 +16,56 @@ form {
 
 }
 legend{
-    color: rgba(85, 68, 173, 0.77);
+    color: rgba(8, 42, 129, 0.77);
+}
+fieldset{
+    border: 1px solid #25d1ec;
+    color: rgba(51, 21, 150, 0.77);
 }
 table ,td {
-    height: 50px;
-    vertical-align: bottom;
-    border: 1px solid black;
-    border: 1px solid #082a81;
+    background-color: #ebfafc;
+    -moz-border-radius:16px;
+    -webkit-border-radius:16px;
+    border-radius:16px;
+    border:3px solid #dae6e3;
+    display:inline-block;
+    cursor:pointer;
+    color: #4d54fc;
+    font-family:Arial;
+    font-size:15px;
+    padding:11px 11px;
+    text-decoration:none;
+    text-shadow:-2px 0px 7px #0010c4;
+    text-align: center;
 }
 
-.tableStyle {
-    height: 50px;
-    vertical-align: bottom;
-    border: 1px solid black;
-    border: 1px solid #082a81;
+
+
+
+
+
+.myForm,.myButton {
+    background-color:#b9e7ed;
+    -moz-border-radius:16px;
+    -webkit-border-radius:16px;
+    border-radius:16px;
+    border:3px solid #b8aae6;
+    display:inline-block;
+    cursor:pointer;
+    color:#fcfcfc;
+    font-family:Arial;
+    font-size:15px;
+    padding:11px 11px;
+    text-decoration:none;
+    text-shadow:-2px 0px 7px #0010c4;
+}
+.myForm:hover {
+    background-color:#8d9ce6;
+}
+.myButton,.myForm:active {
+    position:relative;
+    top:1px;
+}
+.myButton:hover {
+    background-color: #69e0ec;
 }
